--- a/docs/docs/llms/responses-agent-intro/index.mdx
+++ b/docs/docs/llms/responses-agent-intro/index.mdx
@@ -3,19 +3,23 @@ import { APILink } from "@site/src/components/APILink";
 # Tutorial: ResponsesAgent Introduction
 
 ## What is a ResponsesAgent?
-`ResponsesAgent` is a subclass of `PythonModel` that provides a framework-agnostic way to create an agent model. Authoring a `ResponsesAgent` provides the following benefits:
-- Ensure your model is compatible with OpenAI Responses API (Read more about it in the [Responses API Introduction](./responses-api-intro))
-- Support for multiple messages and intermediate steps
+`ResponsesAgent` is a subclass of `PythonModel` that provides a framework-agnostic way to create an agent model. Authoring an agent using `ResponsesAgent` provides the following benefits:
+- Support for returning multiple output messages, including intermediate outputs from tool-calling
 - Support for multi-agent scenarios
 - Ensure compatibility with MLflow logging, tracing, and model serving
+- Ensure your model is compatible with OpenAI Responses API, making it compatible with OpenAI's responses client and other downstream UIs/applications
+
 
 We recommend `ResponsesAgent` instead of <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink> and <APILink fn="mlflow.pyfunc.ChatAgent">`ChatAgent`</APILink>, as it has all the benefits of `ChatAgent` and is compatible with OpenAIs Responses API.
 
 
 ## Author a ResponsesAgent
 
-To author a ResponsesAgent, create a subclass of the ResponsesAgent and implement a predict method using any agent authoring framework. You must be using `pydantic>=2` to use ResponsesAgent.
+### Getting Started
+To author an agent, create a subclass of the `mlflow.pyfunc.ResponsesAgent` and implement your agent logic in its `predict` method. You can use any agent authoring framework in your implementation. You must use `pydantic>=2` to use ResponsesAgent. See the full example ResponsesAgent below.
 
+
+### Streaming agent output
 When creating output objects, you should only create `ResponsesAgentResponse` and `ResponsesAgentStreamEvent` pydantic objects. The other classes in `mlflow.types.responses_helpers` are for validation only. Below is an example of a tool calling sequence:
 ```python
 from mlflow.types.responses import ResponsesAgentResponse
@@ -92,17 +96,13 @@ ResponsesAgentStreamEvent(
 )
 ```
 
-
-### Streaming a ResponsesAgent
-
-
-See the [example below](#example-responsesagent) for a full implementation!
+See the [example below](#example) for a full implementation!
 
 
 
-## Log a ResponsesAgent
+## Log your agent
 
-Log your ResponsesAgent using the [Models-from-code](/model/models-from-code) approach. This approach is framework-agnostic and supports all authoring frameworks:
+Log your agent using the [Models-from-code](/model/models-from-code) approach. This approach is framework-agnostic and supports all authoring frameworks:
 ```python
 with mlflow.start_run():
     logged_agent_info = mlflow.pyfunc.log_model(
@@ -121,7 +121,7 @@ For ease of use, MLflow has built in the following features:
     - If you do provide an input example, ensure it's a dictionary of the ResponsesAgentRequest schema
 
 
-## Testing out a ResponsesAgent
+## Testing out your agent
 To test out a ResponsesAgent, you can pass a single input dictionary that follows the ResponsesAgentRequest schema both before and after logging it:
 ```python
 from mlflow.pyfunc import ResponsesAgent
@@ -134,7 +134,7 @@ responses_agent.predict(
         "context": {"conversation_id": "123", "user_id": "456"},
     }
 )
-# log responses_agent
+# log the responses_agent
 loaded_model = mlflow.pyfunc.load_model(path)
 loaded_model.predict(
     {
@@ -145,10 +145,11 @@ loaded_model.predict(
 ```
 
 
-## Example ResponsesAgent
-Here's an example of a ResponsesAgent that calls OpenAI's gpt-4o model with a simple tool.
+## Example
+Here's an example of an agent that calls OpenAI's gpt-4o model with a simple tool.
 
 ```python
+%%writefile agent.py
 import json
 from typing import Any, Callable, Generator
 from uuid import uuid4
@@ -159,9 +160,9 @@ import openai
 from mlflow.entities import SpanType
 from mlflow.pyfunc import ResponsesAgent
 from mlflow.types.responses import (
-    ResponsesRequest,
-    ResponsesResponse,
-    ResponsesStreamEvent,
+    ResponsesAgentRequest,
+    ResponsesAgentResponse,
+    ResponsesAgentStreamEvent,
 )
 from openai import OpenAI
 from pydantic import BaseModel
@@ -202,7 +203,7 @@ class ToolCallingAgent(ResponsesAgent):
 
     @backoff.on_exception(backoff.expo, openai.RateLimitError)
     @mlflow.trace(span_type=SpanType.LLM)
-    def call_llm(self, input_messages) -> ResponsesStreamEvent:
+    def call_llm(self, input_messages) -> ResponsesAgentStreamEvent:
         return (
             self.client.responses.create(
                 model=self.llm_endpoint,
@@ -213,9 +214,9 @@ class ToolCallingAgent(ResponsesAgent):
             .model_dump(exclude_none=True)
         )
 
-    def handle_tool_call(self, tool_call: dict[str, Any]) -> ResponsesStreamEvent:
+    def handle_tool_call(self, tool_call: dict[str, Any]) -> ResponsesAgentStreamEvent:
         """
-        Execute tool calls and return a ResponsesStreamEvent w/ tool output
+        Execute tool calls and return a ResponsesAgentStreamEvent w/ tool output
         """
         args = json.loads(tool_call["arguments"])
         result = str(self.execute_tool(tool_name=tool_call["name"], args=args))
@@ -225,13 +226,13 @@ class ToolCallingAgent(ResponsesAgent):
             "call_id": tool_call["call_id"],
             "output": result,
         }
-        return ResponsesStreamEvent(type="response.output_item.done", item=tool_call_output)
+        return ResponsesAgentStreamEvent(type="response.output_item.done", item=tool_call_output)
 
     def call_and_run_tools(
         self,
         input_messages,
         max_iter: int = 10,
-    ) -> Generator[ResponsesStreamEvent, None, None]:
+    ) -> Generator[ResponsesAgentStreamEvent, None, None]:
         for _ in range(max_iter):
             last_msg = input_messages[-1]
             if (
@@ -246,12 +247,12 @@ class ToolCallingAgent(ResponsesAgent):
             else:
                 llm_output = self.call_llm(input_messages=input_messages)
                 input_messages.append(llm_output)
-                yield ResponsesStreamEvent(
+                yield ResponsesAgentStreamEvent(
                     type="response.output_item.done",
                     item=llm_output,
                 )
 
-        yield ResponsesStreamEvent(
+        yield ResponsesAgentStreamEvent(
             type="response.output_item.done",
             item={
                 "id": str(uuid4()),
@@ -267,18 +268,18 @@ class ToolCallingAgent(ResponsesAgent):
         )
 
     @mlflow.trace(span_type=SpanType.AGENT)
-    def predict(self, request: ResponsesRequest) -> ResponsesResponse:
+    def predict(self, request: ResponsesAgentRequest) -> ResponsesAgentResponse:
         outputs = [
             event.item
             for event in self.predict_stream(request)
             if event.type == "response.output_item.done"
         ]
-        return ResponsesResponse(output=outputs, custom_outputs=request.custom_inputs)
+        return ResponsesAgentResponse(output=outputs, custom_outputs=request.custom_inputs)
 
     @mlflow.trace(span_type=SpanType.AGENT)
     def predict_stream(
-        self, request: ResponsesRequest
-    ) -> Generator[ResponsesStreamEvent, None, None]:
+        self, request: ResponsesAgentRequest
+    ) -> Generator[ResponsesAgentStreamEvent, None, None]:
         input_messages = [{"role": "system", "content": SYSTEM_PROMPT}] + [
             i.model_dump() for i in request.input
         ]
@@ -300,7 +301,7 @@ tools = [
             },
             "strict": True,
         },
-        exec_fn=lambda x: x,  # dummy tool implementation
+        exec_fn=lambda latitude, longitude: latitude+longitude,  # dummy tool implementation
     )
 ]
 SYSTEM_PROMPT = "You are a helpful assistant that can call tools to get information."
