--- a/docs/docs/llms/responses-agent-intro/index.mdx
+++ b/docs/docs/llms/responses-agent-intro/index.mdx
@@ -1,6 +1,6 @@
 import { APILink } from "@site/src/components/APILink";
 
-# Tutorial: ResponsesAgent Introduction
+# ResponsesAgent Introduction
 
 ## What is a ResponsesAgent?
 `ResponsesAgent` is a subclass of `PythonModel` that provides a framework-agnostic way to create an agent model. Authoring an agent using `ResponsesAgent` provides the following benefits:
