--- a/docs/docs/mlflow-3/index.mdx
+++ b/docs/docs/mlflow-3/index.mdx
@@ -279,6 +279,10 @@ MLflow 3.0 introduces some key API changes while also removes some outdated feat
     - mleap
 - AI gateway client APIs: use deployments APIs instead
 
+### Breaking changes
+
+Please refer to this [page](./breaking-changes/index.html) for the full list of breaking changes in MLflow 3.
+
 ### Compatibility with MLflow 2.x
 
 We strongly recommend upgrading **both client and server** to MLflow 3.x for the best experience. A mismatch between client and server versions may lead to unexpected behavior.
