--- a/docs/docs/mlflow-3/index.mdx
+++ b/docs/docs/mlflow-3/index.mdx
@@ -281,7 +281,7 @@ MLflow 3.0 introduces some key API changes while also removes some outdated feat
 
 ### Breaking changes
 
-Please refer to this [page](./breaking-changes/index.html) for the full list of breaking changes in MLflow 3.
+Please refer to this [page](./breaking-changes) for the full list of breaking changes in MLflow 3.
 
 ### Compatibility with MLflow 2.x
 
